# Fmpeg

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lis/fmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Triangle.vsh  doubleTriangle.vsh  t.fsh  t.vsh  texture.fsh  texture.vsh  video.vsh
app/src/main/assets/glsl/: guide_line.fsh  guide_line.vsh  nv21.fsh  video.fsh
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/player/: FFMediaPlayer.cpp  PlayerWrapper.cpp
app/src/main/cpp/player/decoder/: DecoderBase.cpp  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/player/render/video/: NativeRender.cpp  NativeRender.h
app/src/main/java/com/lis/fmpeg/: MainActivity.java  MyApp.java
app/src/main/java/com/lis/fmpeg/audio/: AudioActivity.java  AudioRecorder.java  AudioTracker.java
app/src/main/java/com/lis/fmpeg/ffmpeg/: EventCallback.java  FfmpegUtils.java  (+2 more)
app/src/main/res/layout/: activity_audio.xml  activity_audioo.xml  activity_glesactivity.xml  activity_glvideo.xml  activity_main.xml  activity_media_codec_decode.xml  activity_native_window_play.xml  activity_open_glvideo.xml
app/src/main/res/menu/: gles_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lis/fmpeg/: ExampleUnitTest.java
pplayer/: build.gradle
pplayer/src/androidTest/java/com/lis/pplayer/: ExampleInstrumentedTest.java
pplayer/src/main/: AndroidManifest.xml
pplayer/src/main/cpp/: CMakeLists.txt  native-lib.cpp
pplayer/src/main/cpp/gles/: DoubleTriangleSample.cpp  DoubleTriangleSample.h  GLSampleBase.h  MyGLRenderContext.cpp  MyGLRenderContext.h  NV21PicSample.cpp  NV21PicSample.h  PictureSample.cpp  PictureSample.h  PlayCallback.cpp  PlayCallback.h  TriangleSample.cpp  TriangleSample.h  gles_play.cpp  gles_play.h  guide_line.cpp  guide_line.h  video_play.cpp  video_play.h
pplayer/src/main/cpp/opensl/: AudioEngine.h  OpenSLAudioPlay.cpp  OpenSLAudioPlay.h  OpenSLAudioRecord.cpp  OpenSLAudioRecord.h
pplayer/src/main/cpp/player/: FFMediaPlayer.cpp  FFMediaPlayer.h  MediaPlayer.h  PlayerWrapper.cpp  PlayerWrapper.h
pplayer/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
pplayer/src/main/cpp/player/render/audio/: AudioRender.h  OpenSLRender.cpp  OpenSLRender.h
pplayer/src/main/cpp/player/render/video/: NativeRender.cpp  VideoGLRender.cpp  VideoGLRender.h  VideoRender.h
pplayer/src/main/cpp/stbi_img/: stb_image.cpp
pplayer/src/main/cpp/utils/: EnvManager.cpp  EnvManager.h  GLTools.cpp  GLTools.h  MyAssetManager.cpp  MyAssetManager.h  NativeImage.h  logUtils.h
pplayer/src/main/java/com/lis/pplayer/: EventCallback.java  FfmpegUtils.java  GlobalContext.java  NativePCMPlayer.java  YUVPlay.java
pplayer/src/test/java/com/lis/pplayer/: ExampleUnitTest.java
(+13 files in other folders)
